# plato-agent-python

./: .gitignore  AGENT.md  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dashboard.py  fishing_boat.py  llm_agent.py  monitor.py
plato_agent/: __init__.py  agent.py  client.py  config.py  escalation.py  protocol.py  room.py  summary.py
tests/: test_agent.py  test_client.py  test_escalation.py  test_protocol.py  test_room.py
