[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-agent"
version = "0.1.0"
description = "Python agent framework for Plato Engine Blocks — connect to rooms, observe ticks, send commands, make decisions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SuperInstance" }]
keywords = ["plato", "iot", "agent", "async", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "rich>=13"]
llm = ["openai>=1.0"]

[project.urls]
Homepage = "https://github.com/SuperInstance/plato-agent-python"
Repository = "https://github.com/SuperInstance/plato-agent-python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
